llvm-gcc-4.2-2.9/gcc/testsuite/objc.dg/objc2-property-typedefprotocol.m
/* APPLE LOCAL file radar 6267049 */
typedef int MyTypedef;

@interface MyClass

@property MyTypedef <Gobbledygook> myProperty; /* { dg-error "qualified type is not a valid object" } */
	/* { dg-error "cannot find protocol declaration for \\'Gobbledygook\\'" "" { target *-*-* } 6 } */

@end

